Made ABX stats tables more compact. Added ABX tag stats. Fixed share link overflowing.

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,8 @@ html, body, #root {
     margin-right: 6px;
     padding: 20px 0 !important
 }
+.scrollableLink {
+    max-width: calc(100% - 48px);
+    white-space: nowrap;
+    overflow-x: auto;
+}
